# Embedded-Linux

./: task.sh
AdminLinux_task1/: .~lock.task1.docx#  README.md  task1.docx  task1.odt
AdminLinux_task2/: a.out  explain.txt  task_2.c
AdminLinux_task3/: ReadMe.md  task_3_script.sh
AdminLinux_task4/: day_5_task.sh
EmbeddedLinux_task_Cmake/: CMakeLists.txt  ReadMe.md  main.c
EmbeddedLinux_task_Cmake/Includes/: add.h  div.h  mod.h  mult.h  sub.h
exam/: log_analysis.sh
